[learn]props, slot

--- a/index.html
+++ b/index.html
@@ -8,10 +8,8 @@
   </head>
   <body>
     <div id="app">
-      <paragraph></paragraph>
-      <paragraph></paragraph>
-      <paragraph></paragraph>
-      <paragraph></paragraph>
+      <paragraph>hello</paragraph>
+      <paragraph>world</paragraph>
       <paragraph></paragraph>
     </div>
 
