[learn]class binding

--- a/index.html
+++ b/index.html
@@ -8,9 +8,8 @@
   </head>
   <body>
     <div id="app">
-      <paragraph>hello</paragraph>
-      <paragraph>world</paragraph>
-      <paragraph></paragraph>
+      <h1 :class="classObject">Hello</h1>
+      <button @click="isActive = !isActive">切り替え</button>
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
