[learn]style binding

--- a/index.html
+++ b/index.html
@@ -8,10 +8,7 @@
   </head>
   <body>
     <div id="app">
-      <h1 :class="classObject">Hello</h1>
-      <button @click="isActive = !isActive">切り替え</button>
-
-      <h1 :class="[{red: isActive}, bg]">World</h1>
+      <h1 :style="{color: textColor, 'background-color': bgColor}">Hello</h1>
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
