--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <div id="app">
-      <h1 :style="styleObject">Hello</h1>
+      <h1 :style="[styleObject, baseObject]">Hello</h1>
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
