--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
   <body>
     <div id="app">
       <p v-if="ok">OK!</p>
+      <p v-else="ok">Not OK!</p>
+      <button @click="ok = !ok">切り替え</button>
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
