--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   <body>
     <div id="app">
       <p v-if="ok">OK!</p>
+      <p v-else-if="maybeOk">maybe OK!</p>
       <p v-else="ok">Not OK!</p>
       <button @click="ok = !ok">切り替え</button>
     </div>
