--- a/index.html
+++ b/index.html
@@ -8,10 +8,12 @@
   </head>
   <body>
     <div id="app">
-      <p v-if="ok">OK!</p>
-      <p v-else-if="maybeOk">maybe OK!</p>
-      <p v-else="ok">Not OK!</p>
-      <button @click="ok = !ok">切り替え</button>
+      <template v-if="ok">
+        <p>おはよう</p>
+        <p>こんにちは</p>
+        <p>おやすみ</p>
+      </template>
+      <button @click="ok = !ok">表示切り替え</button>
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
