[learn]v-for object

--- a/index.html
+++ b/index.html
@@ -11,6 +11,10 @@
       <ul v-for="(fruit, index) in fruits">
         <li>{{ index }}{{ fruit }}</li>
       </ul>
+
+      <ul v-for="value in Object">
+        <li>{{ value }}</li>
+      </ul>
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
