--- a/index.html
+++ b/index.html
@@ -14,6 +14,9 @@
           <hr />
         </ul>
       </template>
+      <ul v-for="n in 10">
+        <li>{{ n }}</li>
+      </ul>
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
