--- a/index.html
+++ b/index.html
@@ -7,15 +7,12 @@
     <title>練習用</title>
   </head>
   <body>
-    <div id="app">
-      <div v-for="fruit in fruits" :key="fruit">
-        <ul>
-          <li>{{ fruit.id }}:{{ fruit.name }}</li>
-          <input type="text" />
-        </ul>
-      </div>
+    <div id="app1">
+      <p>{{ message }}</p>
+    </div>
 
-      <button @click="remove">先頭を削除</button>
+    <div id="app2">
+      <p>{{ message }}</p>
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
