[learn]change other instance

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 
     <div id="app2">
       <p>{{ message }}</p>
+      <button @click="changeMessage1">インスタンス1のmessageを変更</button>
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
