--- a/index.html
+++ b/index.html
@@ -7,8 +7,9 @@
     <title>練習用</title>
   </head>
   <body>
-    <div id="app1">
+    <div id="app">
       <p>{{ message }}</p>
+      <p>{{ myData }}</p>
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
