[learn]template propaty

--- a/index.html
+++ b/index.html
@@ -7,10 +7,7 @@
     <title>練習用</title>
   </head>
   <body>
-    <div id="app">
-      <p>{{ message }}</p>
-      <p>{{ myData }}</p>
-    </div>
+    <div id="app"></div>
 
     <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
     <script src="main.js"></script>
