--- a/index.html
+++ b/index.html
@@ -7,7 +7,11 @@
     <title>練習用</title>
   </head>
   <body>
-    <div id="app"></div>
+    <div id="app">
+      <hello></hello>
+      <hello></hello>
+      <hello></hello>
+    </div>
 
     <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
     <script src="main.js"></script>
